# yad

./: meson.build  meson_options.txt
data/: meson.build  yad.1
data/icons/: meson.build
po/: meson.build
src/: main.c  meson.build  option.c  yad.h
